[tool.poetry]
name = "cowbell"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
